- Fixed: Allow negative keyboard input value (-1) for due dates when editing products (#576)
- Fixed: Crash on shopping list item edit page when product contains deleted quantity units (#582)
- Fixed: On shopping list item edit page the change of product prevented saving (#583)
- Fixed: FAB displayed after rotation on pages where no FAB is used (#552)
- Fixed: Crash on stock journal page
- Fixed: (not F-Droid) ML Kit scanner doesn't ask for contacts permission anymore

## 2.3.0

- New: Support for grocy server v3.3.1
- New: Recipes feature (huge thanks @Tim-Otte for your great work!) (#148)
- New: HTML viewer and editor for product description which can load pictures
- New: Stock journal page (#140)
- New: Server v3.3.0 feature "Notes for stock entries" (#511)
- New: Stock quantity unit now can be changed with server v3.3.0 (#511)
- New: Notification for due soon items in stock (thanks @igor-cali for the initial work) (#108)
- New: Chores can now be rescheduled (server v3.3.0 feature) (#511)
- Improved: Entries on stock entries page are colored if volatile
- Improved: Price entered on inventory page is now related to selected quantity unit (#511)
- Improved: On transaction pages adding of known barcode is prevented (#541)
- Improved: On stock overview page you can search with grocy code (#547)
- Improved: Chores page now displays time if necessary (#549)
- Improved: (not F-Droid) Add explanation for contacts permission on devices with GPlay services
- Fixed: Product 'purchase to stock' conversion is preferred to additional conversions (#490)
- Fixed: Quantity units from default conversions are now selectable on transaction pages (#530)
- Fixed: Location filter didn't work properly on stock overview page (#554)
- Fixed: Skip scanner steps on login if no camera available (#553)

## 2.2.1

- New: Stock entries page (#403)
- Improved: Display stock locations on product overview bottom sheet (#449)