@@ -20,6 +20,7 @@
 - Fixed: On shopping list item edit page the change of product prevented saving (#583)
 - Fixed: FAB displayed after rotation on pages where no FAB is used (#552)
 - Fixed: Crash on stock journal page
+- Fixed: Crash on master product page when saving changes
 - Fixed: (not F-Droid) ML Kit scanner doesn't ask for contacts permission anymore
 
 ## 2.3.0
